# websocket-file-transfer

websocket_client/: analysis_options.yaml  pubspec.yaml
websocket_client/lib/: HistoryPage.dart  ReceivePage.dart  SendPage.dart  history.dart  main.dart  noDartHtml.dart  websocketClient.dart  websocketServer.dart  ws.dart
websocket_server/: .gitignore  Cargo.toml
websocket_server/src/: main.rs
