[package]
name = "websocket_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
futures-channel = "0.3.26"
futures-util = "0.3.26"
local-ip-address = "0.5.1"
log = "0.4.17"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
tokio = {version = "1.25.0", features = ["full"]}
tokio-tungstenite = "0.18.0"
tungstenite = "0.18.0"
